src/styles/navbar.css
.navbar {
    position: fixed; 
    top: 0;
    left: 0;
    width: 100%;
    background-color: #2c2c2c;
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 80px;
    z-index: 10; 
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
    overflow: visible;
}
.switch {
    margin-left: auto;
    right: 0px;
    margin-right: 4px;
    transition-duration: 0.5s;
}
.nav-link {
    height: 100%;
    font-family: Arial, Helvetica, sans-serif;
    align-self: flex-end;
    color: rgb(175, 174, 174);
    margin: 15px;
    font-size: 17px;
    transition: color 0.3s, text-decoration-color 0.3s;
    text-underline-offset: 7px;
}
.nav-link-active {
    font-weight: bold;
    text-decoration: underline;
    text-decoration-thickness: 2px;
    text-decoration-color: purple;
    text-decoration-skip-ink: none;
}
.nav-link:hover {
    text-decoration-thickness: 2px !important;
    color: rgb(255, 255, 255);
    text-decoration: underline;
    text-decoration-color: purple;
    text-decoration-skip-ink: none;
}
@media screen and (max-width: 800px) {
    .navbar {
        height: 50px;
    }
    
    .switch {
        display: none !important;
    }
}

.links {
    position: absolute;
    right: 10px;
    display: flex;
    align-items: center;
    gap: 15px; 
}
@font-face {
    font-family: 'CustomFont';
    src: url('../assets/Agustina.woff') format('woff'); /* Correct path */
    font-weight: normal;
    font-style: normal;
  }
  
  
  .signature {
    font-family: 'CustomFont', Arial, sans-serif; /* Fallback to Arial if the font fails */
    font-size: 30px; /* Adjust font size */
    color: #9b9797; /* Customize text color */
    text-align: center; /* Center align the text */
    left: 0;
    margin-left: 10px;
  }

.hamburger{
    display: none;
    cursor: pointer;
    font-size: 24px;
    margin-right: 10px;
}
  @media screen and (max-width: 860px) {
    .hamburger {
        display: block;
    }
    .links{
        display: none;
    }
    .navbar{
        height: 80px;
    }
    }  

    .navbar-long{
        overflow: hidden;
    position: fixed; 
    top: 0;
    left: 0;
    width: 100%;
    background-color: rgb(44, 44, 44);
    display: flex;
    align-items: center;
    height: 100%;
    z-index: 10; 
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
    }

    .links-long {
        margin-top: -400px;
        display: flex;
        justify-content: space-evenly;
        flex-direction: column;
    }
    .nav-link{
        align-self: flex-start;
    }

